<resources>
    <string name="app_name">GooglePlay</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="load_error">加载失败,点击重试</string>
    <!--详情界面信息-->
    <string name="detail_saving">收藏</string>
    <string name="detail_download">下载</string>
    <string name="detail_shard">分享</string>
    <string name="detail_info_download">下载: %s</string>
    <string name="detail_info_time">时间: %s</string>
    <string name="detail_info_version">版本号: %s</string>
    <string name="detail_info_size">大小: %s</string>
    <string name="detail_app_des">简介</string>
    <string name="detail_app_des_author">作者:  %s</string>
    <string-array name="paper_tab">
        <item>首页</item>
        <item>应用</item>
        <item>游戏</item>
        <item>专题</item>
        <item>推荐</item>
        <item>分类</item>
        <item>排行</item>
    </string-array>
</resources>
