<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/detail_info_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"/>

            <RatingBar
                android:id="@+id/detail_info_stars"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ratingBar_height"
                android:isIndicator="true"
                android:max="5"
                android:progressDrawable="@drawable/ratingbar_zidingyi_full"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_info_downloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_info_download"
                android:textColor="#70000000"/>

            <TextView
                android:id="@+id/detail_info_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/detail_info_time"
                android:textColor="#70000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_info_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_info_version"
                android:textColor="#70000000"/>

            <TextView
                android:id="@+id/detail_info_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/detail_info_size"
                android:textColor="#70000000"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>