<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:background="#30000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#E4E4E4"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/detail_navigation"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/arrow_up"
                    />

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/detail_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="jkljkl"/>
            </LinearLayout>

            <FrameLayout
                android:layout_margin="5dp"
                android:id="@+id/detail_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></FrameLayout>

            <FrameLayout
                android:layout_margin="5dp"
                android:id="@+id/detail_safe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></FrameLayout>

            <FrameLayout
                android:layout_margin="5dp"
                android:id="@+id/detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></FrameLayout>

            <FrameLayout
                android:layout_margin="5dp"
                android:id="@+id/detail_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:background="@drawable/detail_bottom_bg"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail_saving"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/detail_download"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail_shard"/>
    </LinearLayout>
</RelativeLayout>